--- a/persistence-modules/spring-boot-persistence/src/main/resources/templates/index.html
+++ b/persistence-modules/spring-boot-persistence/src/main/resources/templates/index.html
@@ -26,16 +26,16 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr th:each="user : ${users}">
-                                    <td th:text="${user.name}"></td>
-                                    <td th:text="${user.email}"></td>
-                                    <td><a th:href="@{/edit/{id}(id=${user.id})}" class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
-                                    <td><a th:href="@{/delete/{id}(id=${user.id})}" class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>
+                                <tr th:each="person : ${users}">
+                                    <td th:text="${person.name}"></td>
+                                    <td th:text="${person.email}"></td>
+                                    <td><a th:href="@{/edit/{id}(id=${person.id})}" class="btn btn-primary"><i class="fas fa-person-edit ml-2"></i></a></td>
+                                    <td><a th:href="@{/delete/{id}(id=${person.id})}" class="btn btn-primary"><i class="fas fa-person-times ml-2"></i></a></td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>      
-                    <p class="my-5"><a href="/signup" class="btn btn-primary"><i class="fas fa-user-plus ml-2"></i></a></p>
+                    <p class="my-5"><a href="/signup" class="btn btn-primary"><i class="fas fa-person-plus ml-2"></i></a></p>
                 </div>
             </div>
         </div>
